show overflow for events widget to prevent cutting

--- a/html/wp-content/themes/musikcorps-2017/assets/styles/components/_events-sidebar.scss
+++ b/html/wp-content/themes/musikcorps-2017/assets/styles/components/_events-sidebar.scss
@@ -15,4 +15,8 @@
   ul.simcal-events {
     margin: 0;
   }
+
+  .simcal-default-calendar-list .simcal-event-details {
+    overflow: visible !important;
+  }
 }
